# bookin

./: .gitignore  Cargo.toml  README.md
src/: google.rs  lib.rs  main.rs  notion.rs
test/: test.json
