[package]
name = "bookin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde = {version = "1.0.136", features = ["derive"]}
jsonwebtoken = "8.0.1"
chrono = "0.4.19"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
